[gd_scene load_steps=2 format=3 uid="uid://db5nv4hhes7d0"]

[ext_resource type="Script" path="res://src/MotorPartSpawner/motor_part_spawner.gd" id="1_pqtdl"]

[node name="MotorPartSpawner" type="Node2D"]
script = ExtResource("1_pqtdl")
MAX_PART_ON_SCREEN = null
spawn_zone = Rect2(3, 3, 370, 210)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PartList" type="Node" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
